--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>IS219 Slideshow</title>
 
-	<link rel="stylesheet" href="css/style.css"/>
-	<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-	<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
-	<script src='js/gallery.js' type="text/javascript"></script>
+<head>
+  <title>IS219 Slideshow</title>
+
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+  <script src='js/gallery.js' type="text/javascript"></script>
 </head>
+
 <body>
   <div id="photoBooth">
-    <p class="banner">IS219 Slide Show</p>
+    <p class="banner">Recent Drawings</p>
     <div id="slideShow">
       <div class="photoHolder">
-        <img class="thumbnail" id="photo" src="http://placehold.it/518x389?text=Welcome+to+my+Gallery" alt="Gallery Image"/>
-        <img class="moreIndicator rot90" src="img/more.png" alt="More Content" onclick="rotate()" onclick="details()"/>
+        <img class="thumbnail" id="photo" src="http://placehold.it/518x389?text=Welcome+to+my+Gallery"
+          alt="Gallery Image" />
+        <img class="moreIndicator rot90" src="img/more.png" alt="More Content" onclick="rotate()" onclick="details()" />
       </div>
-      
+
       <div id="nav">
         <!--SwapPhoto randomizes them so that's an issue-->
-        <img id="prevPhoto" class='rot180' src="img/arrow.png" alt="Previous Photo" onclick="reversePhoto()"/>
-        <img id="nextPhoto" src="img/arrow.png" alt="Next Photo" onclick="swapPhoto()"/>
+        <img id="prevPhoto" class='rot180' src="img/arrow.png" alt="Previous Photo" onclick="reversePhoto()" />
+        <img id="nextPhoto" src="img/arrow.png" alt="Next Photo" onclick="swapPhoto()" />
       </div>
       <div class="details">
         <p class="location">Location: </p>
@@ -31,4 +34,5 @@
     </div>
   </div>
 </body>
+
 </html>
