--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
   <title>IS219 Slideshow</title>
 
   <link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Courier New">
+<style>
+  body {
+    font-family: "Courier New", sans-serif;
+  }
+</style>
   <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
   <script src='js/gallery.js' type="text/javascript"></script>
 </head>
 
 <body>
+  <div class="container">
   <div id="photoBooth">
     <p class="banner">Recent Drawings</p>
     <div id="slideShow">
